Emulation mode added to main form.

--- a/x360ce.App.Beta/MainForm.resx
+++ b/x360ce.App.Beta/MainForm.resx
@@ -124,76 +124,75 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD+
-        DwAAAk1TRnQBSQFMAgEBBQEAAbgBAQG4AQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABIAMAAQEBAAEgBgABIP8A/wD/ACIAASsBPgH/AQABNgGCAf8BAAE9AYkB/wEAATsBiAH/AQABOwGI
-        Af8BAAE7AYgB/wEAATsBiAH/AQABPQGJAf8BAAE2AYIB/wEAASwBPwH/2QABMQFGAf8BRAHnAv8BhgHv
-        Av8BhQHuAv8BhQHuAv8BhQHuAv8BhQHuAv8BhgHvAv8BQwHoAv8BAAExAUYB/9kAATABRQH/ATcB5wH+
-        Af8BQAHqAfwB/wE/AekB+wH/AT8B6QH7Af8BPwHpAfsB/wE/AekB+wH/AUAB6gH8Af8BNwHnAf4B/wEA
-        ATABRQH/2QABKQE8Af8BJwHOAeYB/wErAdAB4gH/ASoBzwHiAf8BKgHPAeIB/wEqAc8B4gH/ASoBzwHi
-        Af8BKwHQAeIB/wEmAc8B5gH/AQABKQE8Af/ZAAEhATUB/wEUAbgB0QH/ARUBuAHOAf8BFQG3Ac0B/wEV
-        AbcBzQH/ARUBtwHNAf8BFQG3Ac0B/wEVAbgBzgH/ARQBuAHRAf8BAAEhATUB/9kAARsBLQH/AQQBogG6
-        Af8BAQGeAbYB/wEAAZ0BtAH/AQABnQG0Af8BAAGdAbQB/wEAAZ0BtAH/AQEBngG2Af8BBAGiAboB/wEA
-        ARsBLQH/2QABEgEkAf8BHAGiAbYB/wEkAaQBtgH/ASMBogG1Af8BIQGiAbUB/wEhAaIBtQH/ASMBogG1
-        Af8BJAGkAbYB/wEcAaIBtgH/AQABFAEmAf/ZAAEKARwB/wE4AagBuAH/AYIBsgG/Af8BgAGwAb4B/wGA
-        AbABvgH/AYABsAG+Af8BgAGwAb4B/wGCAbIBvwH/ATgBqAG4Af8BAAELAR0B/9kAAQMBEwH/ATgBogGw
-        Af8BkAG2AcEB/wGOAbQBvwH/AY4BtAG/Af8BjgG0Ab8B/wGOAbQBvwH/AZABtgHBAf8BOAGiAbAB/wEA
-        AQIBEgH/2gABDQH/AgABDgH/AgABDgH/AgABDgH/AgABDgH/AgABDgH/AgABDgH/AgABDgH/AgABDgH/
-        AgABDgH//wD/AP8A/wD/AP8A3gABLgEPAQAB/wE9ARcBAAH/AUMBHAEAAf8BQwEbAQAB/wFDARsBAAH/
-        AUMBGwEAAf8BQwEbAQAB/wFDARwBAAH/AT0BFwEAAf8BLwEPAQAB/xkAASwBAAH/AQABOwEAAf8BAAFA
-        AQEB/wEAAUABAQH/AQABQAEBAf8BAAFAAQEB/wEAAUABAQH/AQABQAEBAf8BAAE7AQAB/wEAAS0BAAH/
-        GAABIAEaAREB/wEpASIBGQH/AS8BKAEeAf8BLwEoAR4B/wEvASgBHgH/AS8BKAEeAf8BLwEoAR4B/wEv
-        ASgBHgH/ASkBIgEZAf8BIAEaAREB/xoAAT4B/wIAAYIB/wIAAYkB/wIAAYgB/wIAAYgB/wIAAYgB/wIA
-        AYgB/wIAAYkB/wIAAYIB/wIAAT8B/xgAATYBEwEAAv8BwgEsAv8BygE9Af8B/gHJATwB/wH+AckBPAH/
-        Af4ByQE8Af8B/gHJATwC/wHKAT0C/wHBASwB/wE3ARMBAAH/GQABNAEAAf8BLwH/AZoB/wE8Af8BqwH/
-        AToB/wGqAf8BOgH/AaoB/wE6Af8BqgH/AToB/wGqAf8BPAH/AasB/wEvAf8BmgH/AQABNAEAAf8YAAEl
-        AR8BFgH/AdsBzwG2Af8B4QHWAbsB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeEB1gG7
-        Af8B2wHOAbYB/wElAR4BFQH/GgABRgH/AUQBgAL/AYYBkQL/AYUBjwL/AYUBjwL/AYUBjwL/AYUBjwL/
-        AYYBkQL/AUMBgAL/AgABRgH/GAABNQESAQAB/wHvAbEBJwH/Ae0BuAE1Af8B7AG3ATQB/wHsAbcBNAH/
-        AewBtwE0Af8B7AG3ATQB/wHtAbgBNQH/Ae8BsQEnAf8BNQERAQAB/xkAATIBAAH/AScB6QGRAf8BMgHm
-        AZwB/wExAeUBmwH/ATEB5QGbAf8BMQHlAZsB/wExAeUBmwH/ATIB5gGcAf8BJwHpAZEB/wEAATIBAAH/
-        GAABJAEeARUB/wHJAb0BqAH/Ac0BwgGrAf8BzAHAAaoB/wHMAcABqgH/AcwBwAGqAf8BzAHAAaoB/wHN
-        AcIBqwH/AckBvQGoAf8BJAEeARUB/xoAAUUB/wE3AUAB/gH/AUABggH8Af8BPwGBAfsB/wE/AYEB+wH/
-        AT8BgQH7Af8BPwGBAfsB/wFAAYIB/AH/ATcBQAH+Af8CAAFFAf8YAAEsAQsBAAH/AdQBnQEbAf8B0QGg
-        ASMB/wHRAZ8BIQH/AdEBnwEhAf8B0QGfASEB/wHRAZ8BIQH/AdEBoAEjAf8B1AGdARsB/wEsAQsBAAH/
-        GQABKQEAAf8BGgHRAUcB/wEgAc8BhAH/AR8BzgGDAf8BHwHOAYMB/wEfAc4BgwH/AR8BzgGDAf8BIAHP
-        AYQB/wEaAdEBRwH/AQABKQEAAf8YAAEeARgBDwH/AbUBrAGXAf8BtQGtAZkB/wG1AawBmAH/AbUBrAGY
-        Af8BtQGsAZgB/wG1AawBmAH/AbUBrQGZAf8BtQGsAZcB/wEeARcBDwH/GgABPAH/AScBLQHmAf8BKwE1
-        AeIB/wEqATMB4gH/ASoBMwHiAf8BKgEzAeIB/wEqATMB4gH/ASsBNQHiAf8BJgEtAeYB/wIAATwB/xgA
-        ASMBBAEAAf8BuwGHAQoB/wG6AYcBDQH/AbkBhwENAf8BuQGHAQ0B/wG5AYcBDQH/AbkBhwENAf8BugGH
-        AQ0B/wG7AYcBCgH/ASMBBAEAAf8ZAAEhAQAB/wEKAbcBNAH/AQ0BtAE2Af8BDQG0ATYB/wENAbQBNgH/
-        AQ0BtAE2Af8BDQG0ATYB/wENAbQBNgH/AQoBtwE0Af8BAAEhAQAB/xgAARgBEQEKAf8BoQGXAYYB/wGg
-        AZYBhQH/AaABlgGFAf8BoAGWAYUB/wGgAZYBhQH/AaABlgGFAf8BoAGWAYUB/wGhAZcBhgH/ARgBEQEK
-        Af8aAAE1Af8BFAEYAdEB/wEVARsBzgH/ARUBGwHNAf8BFQEbAc0B/wEVARsBzQH/ARUBGwHNAf8BFQEb
-        Ac4B/wEUARgB0QH/AgABNQH/GAABGgIAAf8BogE+AQAB/wGfATsBAAH/AZsBOAEAAf8BmwE4AQAB/wGb
-        ATgBAAH/AZsBOAEAAf8BnwE7AQAB/wGiAT4BAAH/ARoCAAH/GQABGAEAAf8BAAGfASMB/wEAAZsBIQH/
-        AQABmQEeAf8BAAGZAR4B/wEAAZkBHgH/AQABmQEeAf8BAAGbASEB/wEAAZ8BIwH/AQABGAEAAf8YAAER
-        AQsBBAH/AY0BhAFAAf8BigGBAT0B/wGHAUcBOgH/AYcBRwE6Af8BhwFHAToB/wGHAUcBOgH/AYoBgQE9
-        Af8BjQGEAUAB/wERAQsBBAH/GgABLQH/AQQBCAG6Af8BAQEFAbYB/wEAAQIBtAH/AQABAgG0Af8BAAEC
-        AbQB/wEAAQIBtAH/AQEBBQG2Af8BBAEIAboB/wIAAS0B/xgAARECAAH/AZ8BRgEaAf8BoQGEASMB/wGg
-        AYIBIQH/AZ8BgQEgAf8BnwGBASAB/wGgAYIBIQH/AaEBhAEjAf8BnwFGARoB/wERAgAB/xkAAQ8BAAH/
-        ARwBnQEzAf8BJQGfATsB/wEjAZ4BOQH/ASEBnQE4Af8BIQGdATgB/wEjAZ4BOQH/ASUBnwE7Af8BHAGd
-        ATMB/wEAAQ8BAAH/GAABCgEFAQAB/wGUAY4BgwH/AZcBkQGJAf8BlgGQAYcB/wGVAY8BhgH/AZUBjwGG
-        Af8BlgGQAYcB/wGXAZEBiQH/AZQBjgGDAf8BCgEFAQAB/xoAASQB/wEcAR0BtgH/ASQBJgG2Af8BIwEk
-        AbUB/wEhASIBtQH/ASEBIgG1Af8BIwEkAbUB/wEkASYBtgH/ARwBHQG2Af8CAAEmAf8YAAEHAgAB/wGl
-        AY4BOwH/Aa4BmgGEAf8BrQGaAYIB/wGtAZoBggH/Aa0BmgGCAf8BrQGaAYIB/wGuAZoBhAH/AaUBjgE7
-        Af8BBwIAAf8ZAAEFAQAB/wE7AaQBgQH/AYUBrQGQAf8BgwGsAY8B/wGDAawBjwH/AYMBrAGPAf8BgwGs
-        AY8B/wGFAa0BkAH/ATwBpAGBAf8BAAEGAQAB/xgAAQMCAAH/AaABmwGVAf8BqgGmAaIB/wGqAaYBoQH/
-        AaoBpgGhAf8BqgGmAaEB/wGqAaYBoQH/AaoBpgGiAf8BoAGbAZUB/wEDAgAB/xoAARwB/wI4AbgB/wKC
-        Ab8B/wKAAb4B/wKAAb4B/wKAAb4B/wKAAb4B/wKCAb8B/wI4AbgB/wIAAR0B/xsAAf8BnAGLAT4B/wGw
-        AaUBlAH/Aa8BowGSAf8BrwGjAZIB/wGvAaMBkgH/Aa8BowGSAf8BsAGlAZQB/wGcAYoBPgH/AwAB/xsA
-        Af8BPwGbAYAB/wGVAbEBnQH/AZMBrwGbAf8BkwGvAZsB/wGTAa8BmwH/AZMBrwGbAf8BlQGxAZ0B/wE9
-        AZsBgAH/AwAB/xsAAf8BmwGXAZMB/wGxAa8BrAH/Aa8BrQGqAf8BrwGtAaoB/wGvAa0BqgH/Aa8BrQGq
-        Af8BsQGvAawB/wGbAZcBkwH/AwAB/xoAARMB/wI4AbAB/wKQAcEB/wKOAb8B/wKOAb8B/wKOAb8B/wKO
-        Ab8B/wKQAcEB/wI4AbAB/wIAARIB/xsAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
-        Af8bAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/GwAB/wMAAf8DAAH/AwAB/wMA
-        Af8DAAH/AwAB/wMAAf8DAAH/AwAB/xoAAQ0B/wIAAQ4B/wIAAQ4B/wIAAQ4B/wIAAQ4B/wIAAQ4B/wIA
-        AQ4B/wIAAQ4B/wIAAQ4B/wIAAQ4B//8A/wD/AA8AAUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEB
-        BgABARYAA/8BAAL/BgAC/wYAAv8GAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHg
-        AQcGAAHgAQcGAAHgAQcGAAHgAQcGAAL/BgAC/wYAAv8GABj/AeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
-        AeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
-        AeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
-        AeABBwHgAQcB4AEHAeABBxj/Cw==
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADY
+        DwAAAk1TRnQBSQFMAgEBBQEAAegBAQHoAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEgBgABIP8A/wD/ACIAASUBOAH/AQABMAGCAf8BAAE3AYkB/wEAATUBiAH/AQABNQGI
+        Af8BAAE1AYgB/wEAATUBiAH/AQABNwGJAf8BAAEwAYIB/wEAASYBOQH/2QABKwFAAf8BPgHnAv8BhgHv
+        Av8BhQHuAv8BhQHuAv8BhQHuAv8BhQHuAv8BhgHvAv8BPQHoAv8BAAErAUAB/9kAASoBPwH/ATEB5wH+
+        Af8BOgHqAfwB/wE5AekB+wH/ATkB6QH7Af8BOQHpAfsB/wE5AekB+wH/AToB6gH8Af8BMQHnAf4B/wEA
+        ASoBPwH/2QABIwE2Af8BIQHOAeYB/wElAdAB4gH/ASQBzwHiAf8BJAHPAeIB/wEkAc8B4gH/ASQBzwHi
+        Af8BJQHQAeIB/wEgAc8B5gH/AQABIwE2Af/ZAAEbAS8B/wEOAbgB0QH/AQ8BuAHOAf8BDwG3Ac0B/wEP
+        AbcBzQH/AQ8BtwHNAf8BDwG3Ac0B/wEPAbgBzgH/AQ4BuAHRAf8BAAEbAS8B/9kAARUBJwH/AQABogG6
+        Af8BAAGeAbYB/wEAAZ0BtAH/AQABnQG0Af8BAAGdAbQB/wEAAZ0BtAH/AQABngG2Af8BAAGiAboB/wEA
+        ARUBJwH/2QABDAEeAf8BFgGiAbYB/wEeAaQBtgH/AR0BogG1Af8BGwGiAbUB/wEbAaIBtQH/AR0BogG1
+        Af8BHgGkAbYB/wEWAaIBtgH/AQABDgEgAf/ZAAEEARYB/wEyAagBuAH/AYIBsgG/Af8BgAGwAb4B/wGA
+        AbABvgH/AYABsAG+Af8BgAGwAb4B/wGCAbIBvwH/ATIBqAG4Af8BAAEFARcB/9oAAQ0B/wEyAaIBsAH/
+        AZABtgHBAf8BjgG0Ab8B/wGOAbQBvwH/AY4BtAG/Af8BjgG0Ab8B/wGQAbYBwQH/ATIBogGwAf8CAAEM
+        Af/aAAEHAf8CAAEIAf8CAAEIAf8CAAEIAf8CAAEIAf8CAAEIAf8CAAEIAf8CAAEIAf8CAAEIAf8CAAEI
+        Af//AP8A/wD/AP8A/wDeAAEoAQkBAAH/ATcBEQEAAf8BPQEWAQAB/wE9ARUBAAH/AT0BFQEAAf8BPQEV
+        AQAB/wE9ARUBAAH/AT0BFgEAAf8BNwERAQAB/wEpAQkBAAH/GQABJgEAAf8BAAE1AQAB/wEAAToBAAH/
+        AQABOgEAAf8BAAE6AQAB/wEAAToBAAH/AQABOgEAAf8BAAE6AQAB/wEAATUBAAH/AQABJwEAAf8YAAEa
+        ARQBCwH/ASMBHAETAf8BKQEiARgB/wEpASIBGAH/ASkBIgEYAf8BKQEiARgB/wEpASIBGAH/ASkBIgEY
+        Af8BIwEcARMB/wEaARQBCwH/GgABOAH/AgABggH/AgABiQH/AgABiAH/AgABiAH/AgABiAH/AgABiAH/
+        AgABiQH/AgABggH/AgABOQH/GAABMAENAQAC/wHCASYC/wHKATcB/wH+AckBNgH/Af4ByQE2Af8B/gHJ
+        ATYB/wH+AckBNgL/AcoBNwL/AcEBJgH/ATEBDQEAAf8ZAAEuAQAB/wEpAf8BmgH/ATYB/wGrAf8BNAH/
+        AaoB/wE0Af8BqgH/ATQB/wGqAf8BNAH/AaoB/wE2Af8BqwH/ASkB/wGaAf8BAAEuAQAB/xgAAR8BGQEQ
+        Af8B2wHPAbYB/wHhAdYBuwH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4QHWAbsB/wHb
+        Ac4BtgH/AR8BGAEPAf8aAAFAAf8BPgGAAv8BhgGRAv8BhQGPAv8BhQGPAv8BhQGPAv8BhQGPAv8BhgGR
+        Av8BPQGAAv8CAAFAAf8YAAEvAQwBAAH/Ae8BsQEhAf8B7QG4AS8B/wHsAbcBLgH/AewBtwEuAf8B7AG3
+        AS4B/wHsAbcBLgH/Ae0BuAEvAf8B7wGxASEB/wEvAQsBAAH/GQABLAEAAf8BIQHpAZEB/wEsAeYBnAH/
+        ASsB5QGbAf8BKwHlAZsB/wErAeUBmwH/ASsB5QGbAf8BLAHmAZwB/wEhAekBkQH/AQABLAEAAf8YAAEe
+        ARgBDwH/AckBvQGoAf8BzQHCAasB/wHMAcABqgH/AcwBwAGqAf8BzAHAAaoB/wHMAcABqgH/Ac0BwgGr
+        Af8ByQG9AagB/wEeARgBDwH/GgABPwH/ATEBOgH+Af8BOgGCAfwB/wE5AYEB+wH/ATkBgQH7Af8BOQGB
+        AfsB/wE5AYEB+wH/AToBggH8Af8BMQE6Af4B/wIAAT8B/xgAASYBBQEAAf8B1AGdARUB/wHRAaABHQH/
+        AdEBnwEbAf8B0QGfARsB/wHRAZ8BGwH/AdEBnwEbAf8B0QGgAR0B/wHUAZ0BFQH/ASYBBQEAAf8ZAAEj
+        AQAB/wEUAdEBQQH/ARoBzwGEAf8BGQHOAYMB/wEZAc4BgwH/ARkBzgGDAf8BGQHOAYMB/wEaAc8BhAH/
+        ARQB0QFBAf8BAAEjAQAB/xgAARgBEgEJAf8BtQGsAZcB/wG1Aa0BmQH/AbUBrAGYAf8BtQGsAZgB/wG1
+        AawBmAH/AbUBrAGYAf8BtQGtAZkB/wG1AawBlwH/ARgBEQEJAf8aAAE2Af8BIQEnAeYB/wElAS8B4gH/
+        ASQBLQHiAf8BJAEtAeIB/wEkAS0B4gH/ASQBLQHiAf8BJQEvAeIB/wEgAScB5gH/AgABNgH/GAABHQIA
+        Af8BuwGHAQQB/wG6AYcBBwH/AbkBhwEHAf8BuQGHAQcB/wG5AYcBBwH/AbkBhwEHAf8BugGHAQcB/wG7
+        AYcBBAH/AR0CAAH/GQABGwEAAf8BBAG3AS4B/wEHAbQBMAH/AQcBtAEwAf8BBwG0ATAB/wEHAbQBMAH/
+        AQcBtAEwAf8BBwG0ATAB/wEEAbcBLgH/AQABGwEAAf8YAAESAQsBBAH/AaEBlwGGAf8BoAGWAYUB/wGg
+        AZYBhQH/AaABlgGFAf8BoAGWAYUB/wGgAZYBhQH/AaABlgGFAf8BoQGXAYYB/wESAQsBBAH/GgABLwH/
+        AQ4BEgHRAf8BDwEVAc4B/wEPARUBzQH/AQ8BFQHNAf8BDwEVAc0B/wEPARUBzQH/AQ8BFQHOAf8BDgES
+        AdEB/wIAAS8B/xgAARQCAAH/AaIBOAEAAf8BnwE1AQAB/wGbATIBAAH/AZsBMgEAAf8BmwEyAQAB/wGb
+        ATIBAAH/AZ8BNQEAAf8BogE4AQAB/wEUAgAB/xkAARIBAAH/AQABnwEdAf8BAAGbARsB/wEAAZkBGAH/
+        AQABmQEYAf8BAAGZARgB/wEAAZkBGAH/AQABmwEbAf8BAAGfAR0B/wEAARIBAAH/GAABCwEFAQAB/wGN
+        AYQBOgH/AYoBgQE3Af8BhwFBATQB/wGHAUEBNAH/AYcBQQE0Af8BhwFBATQB/wGKAYEBNwH/AY0BhAE6
+        Af8BCwEFAQAB/xoAAScB/wEAAQIBugH/AgABtgH/AgABtAH/AgABtAH/AgABtAH/AgABtAH/AgABtgH/
+        AQABAgG6Af8CAAEnAf8YAAELAgAB/wGfAUABFAH/AaEBhAEdAf8BoAGCARsB/wGfAYEBGgH/AZ8BgQEa
+        Af8BoAGCARsB/wGhAYQBHQH/AZ8BQAEUAf8BCwIAAf8ZAAEJAQAB/wEWAZ0BLQH/AR8BnwE1Af8BHQGe
+        ATMB/wEbAZ0BMgH/ARsBnQEyAf8BHQGeATMB/wEfAZ8BNQH/ARYBnQEtAf8BAAEJAQAB/xgAAQQCAAH/
+        AZQBjgGDAf8BlwGRAYkB/wGWAZABhwH/AZUBjwGGAf8BlQGPAYYB/wGWAZABhwH/AZcBkQGJAf8BlAGO
+        AYMB/wEEAgAB/xoAAR4B/wEWARcBtgH/AR4BIAG2Af8BHQEeAbUB/wEbARwBtQH/ARsBHAG1Af8BHQEe
+        AbUB/wEeASABtgH/ARYBFwG2Af8CAAEgAf8YAAEBAgAB/wGlAY4BNQH/Aa4BmgGEAf8BrQGaAYIB/wGt
+        AZoBggH/Aa0BmgGCAf8BrQGaAYIB/wGuAZoBhAH/AaUBjgE1Af8BAQIAAf8bAAH/ATUBpAGBAf8BhQGt
+        AZAB/wGDAawBjwH/AYMBrAGPAf8BgwGsAY8B/wGDAawBjwH/AYUBrQGQAf8BNgGkAYEB/wMAAf8bAAH/
+        AaABmwGVAf8BqgGmAaIB/wGqAaYBoQH/AaoBpgGhAf8BqgGmAaEB/wGqAaYBoQH/AaoBpgGiAf8BoAGb
+        AZUB/wMAAf8aAAEWAf8CMgG4Af8CggG/Af8CgAG+Af8CgAG+Af8CgAG+Af8CgAG+Af8CggG/Af8CMgG4
+        Af8CAAEXAf8bAAH/AZwBiwE4Af8BsAGlAZQB/wGvAaMBkgH/Aa8BowGSAf8BrwGjAZIB/wGvAaMBkgH/
+        AbABpQGUAf8BnAGKATgB/wMAAf8bAAH/ATkBmwGAAf8BlQGxAZ0B/wGTAa8BmwH/AZMBrwGbAf8BkwGv
+        AZsB/wGTAa8BmwH/AZUBsQGdAf8BNwGbAYAB/wMAAf8bAAH/AZsBlwGTAf8BsQGvAawB/wGvAa0BqgH/
+        Aa8BrQGqAf8BrwGtAaoB/wGvAa0BqgH/AbEBrwGsAf8BmwGXAZMB/wMAAf8aAAENAf8CMgGwAf8CkAHB
+        Af8CjgG/Af8CjgG/Af8CjgG/Af8CjgG/Af8CkAHBAf8CMgGwAf8CAAEMAf8bAAH/AwAB/wMAAf8DAAH/
+        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/GwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
+        AwAB/xsAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8aAAEHAf8CAAEIAf8CAAEI
+        Af8CAAEIAf8CAAEIAf8CAAEIAf8CAAEIAf8CAAEIAf8CAAEIAf8CAAEIAf//AP8A/wAPAAFCAU0BPgcA
+        AT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP/AQAC/wYAAv8GAAL/BgAB4AEHBgAB4AEHBgAB4AEH
+        BgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAC/wYAAv8GAAL/BgAY/wHg
+        AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHg
+        AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHg
+        AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcY/ws=
 </value>
   </data>
   <metadata name="MainStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -2755,6 +2754,9 @@
         /+AAAP/gAAAPgAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAAAAgAAAAMABAADgAwAA4A8AAP//AAA=
 </value>
   </data>
+  <metadata name="GamesToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>860, 17</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>33</value>
   </metadata>
