Issue moved to user control, interface updates.

--- a/x360ce.App.Beta/MainForm.resx
+++ b/x360ce.App.Beta/MainForm.resx
@@ -124,75 +124,95 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADY
-        DwAAAk1TRnQBSQFMAgEBBQEAAegBAQHoAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABIAMAAQEBAAEgBgABIP8A/wD/ACIAASUBOAH/AQABMAGCAf8BAAE3AYkB/wEAATUBiAH/AQABNQGI
-        Af8BAAE1AYgB/wEAATUBiAH/AQABNwGJAf8BAAEwAYIB/wEAASYBOQH/2QABKwFAAf8BPgHnAv8BhgHv
-        Av8BhQHuAv8BhQHuAv8BhQHuAv8BhQHuAv8BhgHvAv8BPQHoAv8BAAErAUAB/9kAASoBPwH/ATEB5wH+
-        Af8BOgHqAfwB/wE5AekB+wH/ATkB6QH7Af8BOQHpAfsB/wE5AekB+wH/AToB6gH8Af8BMQHnAf4B/wEA
-        ASoBPwH/2QABIwE2Af8BIQHOAeYB/wElAdAB4gH/ASQBzwHiAf8BJAHPAeIB/wEkAc8B4gH/ASQBzwHi
-        Af8BJQHQAeIB/wEgAc8B5gH/AQABIwE2Af/ZAAEbAS8B/wEOAbgB0QH/AQ8BuAHOAf8BDwG3Ac0B/wEP
-        AbcBzQH/AQ8BtwHNAf8BDwG3Ac0B/wEPAbgBzgH/AQ4BuAHRAf8BAAEbAS8B/9kAARUBJwH/AQABogG6
-        Af8BAAGeAbYB/wEAAZ0BtAH/AQABnQG0Af8BAAGdAbQB/wEAAZ0BtAH/AQABngG2Af8BAAGiAboB/wEA
-        ARUBJwH/2QABDAEeAf8BFgGiAbYB/wEeAaQBtgH/AR0BogG1Af8BGwGiAbUB/wEbAaIBtQH/AR0BogG1
-        Af8BHgGkAbYB/wEWAaIBtgH/AQABDgEgAf/ZAAEEARYB/wEyAagBuAH/AYIBsgG/Af8BgAGwAb4B/wGA
-        AbABvgH/AYABsAG+Af8BgAGwAb4B/wGCAbIBvwH/ATIBqAG4Af8BAAEFARcB/9oAAQ0B/wEyAaIBsAH/
-        AZABtgHBAf8BjgG0Ab8B/wGOAbQBvwH/AY4BtAG/Af8BjgG0Ab8B/wGQAbYBwQH/ATIBogGwAf8CAAEM
-        Af/aAAEHAf8CAAEIAf8CAAEIAf8CAAEIAf8CAAEIAf8CAAEIAf8CAAEIAf8CAAEIAf8CAAEIAf8CAAEI
-        Af//AP8A/wD/AP8A/wDeAAEoAQkBAAH/ATcBEQEAAf8BPQEWAQAB/wE9ARUBAAH/AT0BFQEAAf8BPQEV
-        AQAB/wE9ARUBAAH/AT0BFgEAAf8BNwERAQAB/wEpAQkBAAH/GQABJgEAAf8BAAE1AQAB/wEAAToBAAH/
-        AQABOgEAAf8BAAE6AQAB/wEAAToBAAH/AQABOgEAAf8BAAE6AQAB/wEAATUBAAH/AQABJwEAAf8YAAEa
-        ARQBCwH/ASMBHAETAf8BKQEiARgB/wEpASIBGAH/ASkBIgEYAf8BKQEiARgB/wEpASIBGAH/ASkBIgEY
-        Af8BIwEcARMB/wEaARQBCwH/GgABOAH/AgABggH/AgABiQH/AgABiAH/AgABiAH/AgABiAH/AgABiAH/
-        AgABiQH/AgABggH/AgABOQH/GAABMAENAQAC/wHCASYC/wHKATcB/wH+AckBNgH/Af4ByQE2Af8B/gHJ
-        ATYB/wH+AckBNgL/AcoBNwL/AcEBJgH/ATEBDQEAAf8ZAAEuAQAB/wEpAf8BmgH/ATYB/wGrAf8BNAH/
-        AaoB/wE0Af8BqgH/ATQB/wGqAf8BNAH/AaoB/wE2Af8BqwH/ASkB/wGaAf8BAAEuAQAB/xgAAR8BGQEQ
-        Af8B2wHPAbYB/wHhAdYBuwH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4QHWAbsB/wHb
-        Ac4BtgH/AR8BGAEPAf8aAAFAAf8BPgGAAv8BhgGRAv8BhQGPAv8BhQGPAv8BhQGPAv8BhQGPAv8BhgGR
-        Av8BPQGAAv8CAAFAAf8YAAEvAQwBAAH/Ae8BsQEhAf8B7QG4AS8B/wHsAbcBLgH/AewBtwEuAf8B7AG3
-        AS4B/wHsAbcBLgH/Ae0BuAEvAf8B7wGxASEB/wEvAQsBAAH/GQABLAEAAf8BIQHpAZEB/wEsAeYBnAH/
-        ASsB5QGbAf8BKwHlAZsB/wErAeUBmwH/ASsB5QGbAf8BLAHmAZwB/wEhAekBkQH/AQABLAEAAf8YAAEe
-        ARgBDwH/AckBvQGoAf8BzQHCAasB/wHMAcABqgH/AcwBwAGqAf8BzAHAAaoB/wHMAcABqgH/Ac0BwgGr
-        Af8ByQG9AagB/wEeARgBDwH/GgABPwH/ATEBOgH+Af8BOgGCAfwB/wE5AYEB+wH/ATkBgQH7Af8BOQGB
-        AfsB/wE5AYEB+wH/AToBggH8Af8BMQE6Af4B/wIAAT8B/xgAASYBBQEAAf8B1AGdARUB/wHRAaABHQH/
-        AdEBnwEbAf8B0QGfARsB/wHRAZ8BGwH/AdEBnwEbAf8B0QGgAR0B/wHUAZ0BFQH/ASYBBQEAAf8ZAAEj
-        AQAB/wEUAdEBQQH/ARoBzwGEAf8BGQHOAYMB/wEZAc4BgwH/ARkBzgGDAf8BGQHOAYMB/wEaAc8BhAH/
-        ARQB0QFBAf8BAAEjAQAB/xgAARgBEgEJAf8BtQGsAZcB/wG1Aa0BmQH/AbUBrAGYAf8BtQGsAZgB/wG1
-        AawBmAH/AbUBrAGYAf8BtQGtAZkB/wG1AawBlwH/ARgBEQEJAf8aAAE2Af8BIQEnAeYB/wElAS8B4gH/
-        ASQBLQHiAf8BJAEtAeIB/wEkAS0B4gH/ASQBLQHiAf8BJQEvAeIB/wEgAScB5gH/AgABNgH/GAABHQIA
-        Af8BuwGHAQQB/wG6AYcBBwH/AbkBhwEHAf8BuQGHAQcB/wG5AYcBBwH/AbkBhwEHAf8BugGHAQcB/wG7
-        AYcBBAH/AR0CAAH/GQABGwEAAf8BBAG3AS4B/wEHAbQBMAH/AQcBtAEwAf8BBwG0ATAB/wEHAbQBMAH/
-        AQcBtAEwAf8BBwG0ATAB/wEEAbcBLgH/AQABGwEAAf8YAAESAQsBBAH/AaEBlwGGAf8BoAGWAYUB/wGg
-        AZYBhQH/AaABlgGFAf8BoAGWAYUB/wGgAZYBhQH/AaABlgGFAf8BoQGXAYYB/wESAQsBBAH/GgABLwH/
-        AQ4BEgHRAf8BDwEVAc4B/wEPARUBzQH/AQ8BFQHNAf8BDwEVAc0B/wEPARUBzQH/AQ8BFQHOAf8BDgES
-        AdEB/wIAAS8B/xgAARQCAAH/AaIBOAEAAf8BnwE1AQAB/wGbATIBAAH/AZsBMgEAAf8BmwEyAQAB/wGb
-        ATIBAAH/AZ8BNQEAAf8BogE4AQAB/wEUAgAB/xkAARIBAAH/AQABnwEdAf8BAAGbARsB/wEAAZkBGAH/
-        AQABmQEYAf8BAAGZARgB/wEAAZkBGAH/AQABmwEbAf8BAAGfAR0B/wEAARIBAAH/GAABCwEFAQAB/wGN
-        AYQBOgH/AYoBgQE3Af8BhwFBATQB/wGHAUEBNAH/AYcBQQE0Af8BhwFBATQB/wGKAYEBNwH/AY0BhAE6
-        Af8BCwEFAQAB/xoAAScB/wEAAQIBugH/AgABtgH/AgABtAH/AgABtAH/AgABtAH/AgABtAH/AgABtgH/
-        AQABAgG6Af8CAAEnAf8YAAELAgAB/wGfAUABFAH/AaEBhAEdAf8BoAGCARsB/wGfAYEBGgH/AZ8BgQEa
-        Af8BoAGCARsB/wGhAYQBHQH/AZ8BQAEUAf8BCwIAAf8ZAAEJAQAB/wEWAZ0BLQH/AR8BnwE1Af8BHQGe
-        ATMB/wEbAZ0BMgH/ARsBnQEyAf8BHQGeATMB/wEfAZ8BNQH/ARYBnQEtAf8BAAEJAQAB/xgAAQQCAAH/
-        AZQBjgGDAf8BlwGRAYkB/wGWAZABhwH/AZUBjwGGAf8BlQGPAYYB/wGWAZABhwH/AZcBkQGJAf8BlAGO
-        AYMB/wEEAgAB/xoAAR4B/wEWARcBtgH/AR4BIAG2Af8BHQEeAbUB/wEbARwBtQH/ARsBHAG1Af8BHQEe
-        AbUB/wEeASABtgH/ARYBFwG2Af8CAAEgAf8YAAEBAgAB/wGlAY4BNQH/Aa4BmgGEAf8BrQGaAYIB/wGt
-        AZoBggH/Aa0BmgGCAf8BrQGaAYIB/wGuAZoBhAH/AaUBjgE1Af8BAQIAAf8bAAH/ATUBpAGBAf8BhQGt
-        AZAB/wGDAawBjwH/AYMBrAGPAf8BgwGsAY8B/wGDAawBjwH/AYUBrQGQAf8BNgGkAYEB/wMAAf8bAAH/
-        AaABmwGVAf8BqgGmAaIB/wGqAaYBoQH/AaoBpgGhAf8BqgGmAaEB/wGqAaYBoQH/AaoBpgGiAf8BoAGb
-        AZUB/wMAAf8aAAEWAf8CMgG4Af8CggG/Af8CgAG+Af8CgAG+Af8CgAG+Af8CgAG+Af8CggG/Af8CMgG4
-        Af8CAAEXAf8bAAH/AZwBiwE4Af8BsAGlAZQB/wGvAaMBkgH/Aa8BowGSAf8BrwGjAZIB/wGvAaMBkgH/
-        AbABpQGUAf8BnAGKATgB/wMAAf8bAAH/ATkBmwGAAf8BlQGxAZ0B/wGTAa8BmwH/AZMBrwGbAf8BkwGv
-        AZsB/wGTAa8BmwH/AZUBsQGdAf8BNwGbAYAB/wMAAf8bAAH/AZsBlwGTAf8BsQGvAawB/wGvAa0BqgH/
-        Aa8BrQGqAf8BrwGtAaoB/wGvAa0BqgH/AbEBrwGsAf8BmwGXAZMB/wMAAf8aAAENAf8CMgGwAf8CkAHB
-        Af8CjgG/Af8CjgG/Af8CjgG/Af8CjgG/Af8CkAHBAf8CMgGwAf8CAAEMAf8bAAH/AwAB/wMAAf8DAAH/
-        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/GwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
-        AwAB/xsAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8aAAEHAf8CAAEIAf8CAAEI
-        Af8CAAEIAf8CAAEIAf8CAAEIAf8CAAEIAf8CAAEIAf8CAAEIAf8CAAEIAf//AP8A/wAPAAFCAU0BPgcA
-        AT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP/AQAC/wYAAv8GAAL/BgAB4AEHBgAB4AEHBgAB4AEH
-        BgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAC/wYAAv8GAAL/BgAY/wHg
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABo
+        FAAAAk1TRnQBSQFMAgEBBgEAATgBAgE4AQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEgBgABIP8AUwADLQFGATYBbAF6AeQBPgGQAaEB/wE+AY0BngH/ATwBjAGeAf8BOQGM
+        AZ0B/wE3AYoBnQH/ATYBigGcAf8BMgGIAZoB/wEwAYcBmwH/AS4BhgGZAf8BLAGFAZoB/wEqAYMBmAH/
+        ASgBhQGYAf8BNAFqAXkB5gMvAUrAAAE1AXQBgQHrAUkB0gHkAf8BLAHgAfIB/wEKAdwB7wH/AQwB3QHw
+        Af8BDAHeAfEB/wEMAd8B8wH/AQsB5AH3Af8BCwHlAfcB/wELAeQB9gH/AQwB5gH2Af8BDAHnAfgB/wEM
+        AegB+QH/AQ8B7AH7Af8BFAHqAfoB/wExAWkBeQHpjQABGwEuAf8BAAEmAYIB/wEAAS0BiQH/AQABKwGI
+        Af8BAAErAYgB/wEAASsBiAH/AQABKwGIAf8BAAEtAYkB/wEAASYBggH/AQABHAEvAf8MAAEvAYABjQH1
+        AUEB0gHjAf8BQwHXAecB/wGHAfIB/QH/AYoB8gH8Af8BjgHyAfsB/wGQAfQB/QH/AYIB3AHjAf8BhgHZ
+        AeEB/wGZAfYB/QH/AZwB9AH9Af8BoAH0AfwB/wGmAfYB/QH/AVQB7AH0Af8BDgHqAfwB/wEgAXIBjAH5
+        jQABIQE2Af8BNAHnAv8BhgHvAv8BhQHuAv8BhQHuAv8BhQHuAv8BhQHuAv8BhgHvAv8BMwHoAv8BAAEh
+        ATYB/wwAAUYBTwFRAZABRgGuAb8B/wFCAdUB5gH/AbEB+QH+Af8BjQH0Av8BkgH2Av8BmgH6Av8BFgED
+        AQQB/wEEAgAB/wGeAfwC/wGVAfgC/wGbAfkC/wGVAfoB/gH/AQ8B4QHxAf8BFwG9AdIB/wFHAVABUwGX
+        jQABIAE1Af8BJwHnAf4B/wEwAeoB/AH/AS8B6QH7Af8BLwHpAfsB/wEvAekB+wH/AS8B6QH7Af8BMAHq
+        AfwB/wEnAecB/gH/AQABIAE1Af8MAAMMARABOAF3AYIB6AE3AbUByAH/AUsB1wHnAf8BtAH5Av8BjAH0
+        Av8BeQH8Av8BgAG8AcAB/wGAAbYBuQH/AYsB/AL/AY4B9gL/AZgB+QL/AUQB5QHyAf8BDQHdAfEB/wEv
+        AXABgAHsAw0BEo0AARkBLAH/ARcBzgHmAf8BGwHQAeIB/wEaAc8B4gH/ARoBzwHiAf8BGgHPAeIB/wEa
+        Ac8B4gH/ARsB0AHiAf8BFgHPAeYB/wEAARkBLAH/EAABOQI7AWABRgGgAbAB/wFJAdUB5gH/AZsB8gH5
+        Af8BjgH1Av8BcwH8Av8BSwGFAYcB/wE2AksB/wGGAfwC/wGJAfcC/wF0AfMB+gH/AQUB2AHtAf8BHAGk
+        AboB/wE7AT0BPgFmkQABEQElAf8BBAG4AdEB/wEFAbgBzgH/AQUBtwHNAf8BBQG3Ac0B/wEFAbcBzQH/
+        AQUBtwHNAf8BBQG4Ac4B/wEEAbgB0QH/AQABEQElAf8TAAEBAUMBZgFsAcYBQAG4AcoB/wFNAdYB5gH/
+        AbkB+wL/AXwB/AL/AS4BOwE5Af8BKgEtAS4B/wGCAfwC/wGNAfgC/wEmAdoB6wH/AREBzQHjAf8BRAFk
+        AW4BywMBAQKRAAELAR0B/wEAAaIBugH/AQABngG2Af8BAAGdAbQB/wEAAZ0BtAH/AQABnQG0Af8BAAGd
+        AbQB/wEAAZ4BtgH/AQABogG6Af8BAAELAR0B/xQAAyIBMgE6AZQBpQH8AVMB1wHpAf8BnQHwAfcB/wGd
+        A/8BTwFHAUYB/wELAgAB/wGFAfwC/wFXAeoB9QH/AQMBzgHoAf8BIwGSAaUB/QMlATeVAAECARQB/wEM
+        AaIBtgH/ARQBpAG2Af8BEwGiAbUB/wERAaIBtQH/AREBogG1Af8BEwGiAbUB/wEUAaQBtgH/AQwBogG2
+        Af8BAAEEARYB/xgAAUcBUwFUAZcBOwGyAcMB/wFQAdUB5gH/AcED/wGWAZkBmgH/AYgCiQH/AZQD/wEs
+        AdQB5wH/ARsBugHQAf8BSAFVAVcBnZoAAQwB/wEoAagBuAH/AYIBsgG/Af8BgAGwAb4B/wGAAbABvgH/
+        AYABsAG+Af8BgAGwAb4B/wGCAbIBvwH/ASgBqAG4Af8CAAENAf8YAAMNARIBNwF9AYoB6wFcAdgB6QH/
+        AaEB7gH3Af8BmQP/AZYD/wGPAewB9gH/AV4B3QHvAf8BNAF8AYkB7gMQARWaAAEDAf8BKAGiAbAB/wGQ
+        AbYBwQH/AY4BtAG/Af8BjgG0Ab8B/wGOAbQBvwH/AY4BtAG/Af8BkAG2AcEB/wEoAaIBsAH/AgABAgH/
+        HAABOwI9AWUBPQGmAbcB/wFcAdcB5wH/AcgB+gH+Af8BqQH5Af4B/wF0Ad4B7QH/AUEBsQHCAf8BPgFA
+        AUEBbJ8AAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8cAAMBAQIBQgFrAXEBywFK
+        AbsBywH/AWMB2gHoAf8BdAHkAfEB/wFxAdoB6gH/AUMBbAFyAc8DAgED5AADJQE3AUEBogGtAf0BVQG/
+        Ac8B/wFiAcYB1gH/ATsBnQGsAf4DKAE87AABPgJCAW8BOQGKAZUB8wE5AYsBlgH0AUACRQF1/wD/AP8A
+        /wCoAAEeAgAB/wEtAQcBAAH/ATMBDAEAAf8BMwELAQAB/wEzAQsBAAH/ATMBCwEAAf8BMwELAQAB/wEz
+        AQwBAAH/AS0BBwEAAf8BHwIAAf8ZAAEcAQAB/wEAASsBAAH/AQABMAEAAf8BAAEwAQAB/wEAATABAAH/
+        AQABMAEAAf8BAAEwAQAB/wEAATABAAH/AQABKwEAAf8BAAEdAQAB/xgAARABCgEBAf8BGQESAQkB/wEf
+        ARgBDgH/AR8BGAEOAf8BHwEYAQ4B/wEfARgBDgH/AR8BGAEOAf8BHwEYAQ4B/wEZARIBCQH/ARABCgEB
+        Af8aAAEuAf8CAAGCAf8CAAGJAf8CAAGIAf8CAAGIAf8CAAGIAf8CAAGIAf8CAAGJAf8CAAGCAf8CAAEv
+        Af8YAAEmAQMBAAL/AcIBHAL/AcoBLQH/Af4ByQEsAf8B/gHJASwB/wH+AckBLAH/Af4ByQEsAv8BygEt
+        Av8BwQEcAf8BJwEDAQAB/xkAASQBAAH/AR8B/wGaAf8BLAH/AasB/wEqAf8BqgH/ASoB/wGqAf8BKgH/
+        AaoB/wEqAf8BqgH/ASwB/wGrAf8BHwH/AZoB/wEAASQBAAH/GAABFQEPAQYB/wHbAc8BtgH/AeEB1gG7
+        Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHhAdYBuwH/AdsBzgG2Af8BFQEOAQUB/xoA
+        ATYB/wE0AYAC/wGGAZEC/wGFAY8C/wGFAY8C/wGFAY8C/wGFAY8C/wGGAZEC/wEzAYAC/wIAATYB/xgA
+        ASUBAgEAAf8B7wGxARcB/wHtAbgBJQH/AewBtwEkAf8B7AG3ASQB/wHsAbcBJAH/AewBtwEkAf8B7QG4
+        ASUB/wHvAbEBFwH/ASUBAQEAAf8ZAAEiAQAB/wEXAekBkQH/ASIB5gGcAf8BIQHlAZsB/wEhAeUBmwH/
+        ASEB5QGbAf8BIQHlAZsB/wEiAeYBnAH/ARcB6QGRAf8BAAEiAQAB/xgAARQBDgEFAf8ByQG9AagB/wHN
+        AcIBqwH/AcwBwAGqAf8BzAHAAaoB/wHMAcABqgH/AcwBwAGqAf8BzQHCAasB/wHJAb0BqAH/ARQBDgEF
+        Af8aAAE1Af8BJwEwAf4B/wEwAYIB/AH/AS8BgQH7Af8BLwGBAfsB/wEvAYEB+wH/AS8BgQH7Af8BMAGC
+        AfwB/wEnATAB/gH/AgABNQH/GAABHAIAAf8B1AGdAQsB/wHRAaABEwH/AdEBnwERAf8B0QGfAREB/wHR
+        AZ8BEQH/AdEBnwERAf8B0QGgARMB/wHUAZ0BCwH/ARwCAAH/GQABGQEAAf8BCgHRATcB/wEQAc8BhAH/
+        AQ8BzgGDAf8BDwHOAYMB/wEPAc4BgwH/AQ8BzgGDAf8BEAHPAYQB/wEKAdEBNwH/AQABGQEAAf8YAAEO
+        AQgBAAH/AbUBrAGXAf8BtQGtAZkB/wG1AawBmAH/AbUBrAGYAf8BtQGsAZgB/wG1AawBmAH/AbUBrQGZ
+        Af8BtQGsAZcB/wEOAQcBAAH/GgABLAH/ARcBHQHmAf8BGwElAeIB/wEaASMB4gH/ARoBIwHiAf8BGgEj
+        AeIB/wEaASMB4gH/ARsBJQHiAf8BFgEdAeYB/wIAASwB/xgAARMCAAH/AbsBhwEAAf8BugGHAQAB/wG5
+        AYcBAAH/AbkBhwEAAf8BuQGHAQAB/wG5AYcBAAH/AboBhwEAAf8BuwGHAQAB/wETAgAB/xkAAREBAAH/
+        AQABtwEkAf8BAAG0ASYB/wEAAbQBJgH/AQABtAEmAf8BAAG0ASYB/wEAAbQBJgH/AQABtAEmAf8BAAG3
+        ASQB/wEAAREBAAH/GAABCAEBAQAB/wGhAZcBhgH/AaABlgGFAf8BoAGWAYUB/wGgAZYBhQH/AaABlgGF
+        Af8BoAGWAYUB/wGgAZYBhQH/AaEBlwGGAf8BCAEBAQAB/xoAASUB/wEEAQgB0QH/AQUBCwHOAf8BBQEL
+        Ac0B/wEFAQsBzQH/AQUBCwHNAf8BBQELAc0B/wEFAQsBzgH/AQQBCAHRAf8CAAElAf8YAAEKAgAB/wGi
+        AS4BAAH/AZ8BKwEAAf8BmwEoAQAB/wGbASgBAAH/AZsBKAEAAf8BmwEoAQAB/wGfASsBAAH/AaIBLgEA
+        Af8BCgIAAf8ZAAEIAQAB/wEAAZ8BEwH/AQABmwERAf8BAAGZAQ4B/wEAAZkBDgH/AQABmQEOAf8BAAGZ
+        AQ4B/wEAAZsBEQH/AQABnwETAf8BAAEIAQAB/xgAAQECAAH/AY0BhAEwAf8BigGBAS0B/wGHATcBKgH/
+        AYcBNwEqAf8BhwE3ASoB/wGHATcBKgH/AYoBgQEtAf8BjQGEATAB/wEBAgAB/xoAAR0B/wIAAboB/wIA
+        AbYB/wIAAbQB/wIAAbQB/wIAAbQB/wIAAbQB/wIAAbYB/wIAAboB/wIAAR0B/xgAAQECAAH/AZ8BNgEK
+        Af8BoQGEARMB/wGgAYIBEQH/AZ8BgQEQAf8BnwGBARAB/wGgAYIBEQH/AaEBhAETAf8BnwE2AQoB/wEB
+        AgAB/xsAAf8BDAGdASMB/wEVAZ8BKwH/ARMBngEpAf8BEQGdASgB/wERAZ0BKAH/ARMBngEpAf8BFQGf
+        ASsB/wEMAZ0BIwH/AwAB/xsAAf8BlAGOAYMB/wGXAZEBiQH/AZYBkAGHAf8BlQGPAYYB/wGVAY8BhgH/
+        AZYBkAGHAf8BlwGRAYkB/wGUAY4BgwH/AwAB/xoAARQB/wEMAQ0BtgH/ARQBFgG2Af8BEwEUAbUB/wER
+        ARIBtQH/AREBEgG1Af8BEwEUAbUB/wEUARYBtgH/AQwBDQG2Af8CAAEWAf8bAAH/AaUBjgErAf8BrgGa
+        AYQB/wGtAZoBggH/Aa0BmgGCAf8BrQGaAYIB/wGtAZoBggH/Aa4BmgGEAf8BpQGOASsB/wMAAf8bAAH/
+        ASsBpAGBAf8BhQGtAZAB/wGDAawBjwH/AYMBrAGPAf8BgwGsAY8B/wGDAawBjwH/AYUBrQGQAf8BLAGk
+        AYEB/wMAAf8bAAH/AaABmwGVAf8BqgGmAaIB/wGqAaYBoQH/AaoBpgGhAf8BqgGmAaEB/wGqAaYBoQH/
+        AaoBpgGiAf8BoAGbAZUB/wMAAf8aAAEMAf8CKAG4Af8CggG/Af8CgAG+Af8CgAG+Af8CgAG+Af8CgAG+
+        Af8CggG/Af8CKAG4Af8CAAENAf8bAAH/AZwBiwEuAf8BsAGlAZQB/wGvAaMBkgH/Aa8BowGSAf8BrwGj
+        AZIB/wGvAaMBkgH/AbABpQGUAf8BnAGKAS4B/wMAAf8bAAH/AS8BmwGAAf8BlQGxAZ0B/wGTAa8BmwH/
+        AZMBrwGbAf8BkwGvAZsB/wGTAa8BmwH/AZUBsQGdAf8BLQGbAYAB/wMAAf8bAAH/AZsBlwGTAf8BsQGv
+        AawB/wGvAa0BqgH/Aa8BrQGqAf8BrwGtAaoB/wGvAa0BqgH/AbEBrwGsAf8BmwGXAZMB/wMAAf8aAAED
+        Af8CKAGwAf8CkAHBAf8CjgG/Af8CjgG/Af8CjgG/Af8CjgG/Af8CkAHBAf8CKAGwAf8CAAECAf8bAAH/
+        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/GwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
+        AwAB/wMAAf8DAAH/AwAB/xsAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8bAAH/
+        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH//wD/AP8ADwABQgFNAT4HAAE+AwABKAMA
+        AUADAAEgAwABAQEAAQEGAAEBFgAD/wEABP8EAAL/BgAC/wYAAeABBwYAAeABBwYAAeABBwYAAeABBwGA
+        AQEEAAHgAQcBgAEBBAAB4AEHAcABAwQAAeABBwHgAQcEAAHgAQcB4AEHBAAB4AEHAfABDwQAAeABBwHw
+        AQ8EAAL/AfgBHwQAAv8B/AE/BAAE/wQAGP8B4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHg
         AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHg
         AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHg
-        AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcY/ws=
+        AQcB4AEHGP8L
 </value>
   </data>
   <metadata name="MainStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -2758,7 +2778,7 @@
     <value>860, 17</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>33</value>
+    <value>118</value>
   </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
