DirectInput and Thumb control updates.

--- a/x360ce.App.Beta/Controls/DirectInputUserControl.resx
+++ b/x360ce.App.Beta/Controls/DirectInputUserControl.resx
@@ -201,4 +201,7 @@
   <metadata name="dataGridViewTextBoxColumn7.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="dataGridViewTextBoxColumn9.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
